--- a/tests/regressiontests/Makefile
+++ b/tests/regressiontests/Makefile
@@ -57,6 +57,7 @@ check-similarity2: sample1.mat $(EXAMPLESDIR)/sample3.png $(EXAMPLESDIR)/sample1
 check-constraints1: $(EXAMPLESDIR)/constraints/tricky.png
 	sh $(RTESTDIR)/check_similarity.sh $< $< - - 0 1
 	sh $(RTESTDIR)/check_similarity.sh $< $< - - 180 1 --angle 140,20
+	TOLER=2 sh $(RTESTDIR)/check_similarity.sh $< $< - - 175 1 --angle 175
 
 check-constraints2: $(EXAMPLESDIR)/constraints/three.png $(EXAMPLESDIR)/constraints/two.png 
 	sh $(RTESTDIR)/check_similarity.sh $^ - - 90 1
@@ -66,7 +67,7 @@ check-tiles: $(EXAMPLESDIR)/tiling/big.png $(EXAMPLESDIR)/tiling/small.png
 	TOLER=8 sh $(RTESTDIR)/check_similarity.sh $^ 156 137 40.5 0.51 --tile
 
 check-examples: $(RSRCDIR)/code/translation.py $(RSRCDIR)/code/similarity.py
-	cd $(RSRCDIR)/code && IMSHOW=no $(PYTHON) $(word 1,$^) > /dev/null
-	cd $(RSRCDIR)/code && IMSHOW=no $(PYTHON) $(word 2,$^) > /dev/null
+	cd $(RSRCDIR)/code && IMSHOW=no $(PYTHON) $(notdir $(word 1,$^)) > /dev/null
+	cd $(RSRCDIR)/code && IMSHOW=no $(PYTHON) $(notdir $(word 2,$^)) > /dev/null
 
 .PHONY: $(CHECKS)
